# mobile_robot

./: README.md
localization/: README.md
localization/data/: data.txt  data2.csv
localization/workspace/src/mymobibot/: Tutorial ROS - Gazebo.odt
localization/workspace/src/mymobibot/mymobibot_control/: CMakeLists.txt
localization/workspace/src/mymobibot/mymobibot_description/: package.xml
localization/workspace/src/mymobibot/mymobibot_description/urdf/: macros.xacro
localization/workspace/src/mymobibot/mymobibot_gazebo/: mymobibot.rviz
localization/workspace/src/mymobibot/mymobibot_gazebo/launch/: mymobibot_world_loc.launch  mymobibot_world_pp.launch  mymobibot_world_wf.launch
localization/workspace/src/mymobibot/mymobibot_gazebo/worlds/: mymobibot_wf.world
localization/workspace/src/robo2_mobile/: CMakeLists.txt
localization/workspace/src/robo2_mobile/launch/: localization.launch  random_walk.launch
localization/workspace/src/robo2_mobile/src/: localization.py  random_walker.cpp
wall_following/: README.md
wall_following/workspace/src/mymobibot/mymobibot_control/: package.xml
wall_following/workspace/src/mymobibot/mymobibot_control/config/: mymobibot_control.yaml
wall_following/workspace/src/mymobibot/mymobibot_description/: CMakeLists.txt
wall_following/workspace/src/mymobibot/mymobibot_description/urdf/: mymobibot.gazebo  (+1 more)
wall_following/workspace/src/mymobibot/mymobibot_gazebo/: CMakeLists.txt  package.xml
wall_following/workspace/src/robo2_mobile/launch/: follower.launch
wall_following/workspace/src/robo2_mobile/scripts/: follower.py
(+3 files in other folders)
